--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="col-lg-6 col-md-6 col-12 mb-4">
                     <div>
                         <h2 class="font-weight-bold mb-3">About Lawyer</h2>
-                        <p><strong>Lawyer</strong> is a trusted law firm dedicated to delivering results with integrity, professionalism, and commitment. With decades of combined experience, our attorneys specialize in corporate law, litigation, real estate, and dispute resolution.</p>
+                        <p><strong>Lawyer</strong> is a trusted law firm dedicated to delivering results with integrity, professionalism, and commitment. With decades of combined experience, our attorneys specialize in corporate law, litigation, real estate,dispute resolution and Inheritance Law.</p>
                         <p>We pride ourselves on providing strategic advice and practical solutions that safeguard your business, your rights, and your future.</p>
                         <p>Our mission is simple: <em>to stand by your side, every step of the way.</em></p>
                         <a href="about-us.html" class="btn btn-primary mt-3">Meet Our Attorneys</a>
