--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@
           <h5 class="fw-bold mb-3">Our Services</h5>
           <ul class="list-unstyled">
             <li>Corporate Law</li>
+            <li>Inheritance Law</li>
             <li>Family Law</li>
             <li>Criminal Defense</li>
             <li>Real Estate Law</li>
