--- a/services.html
+++ b/services.html
@@ -115,7 +115,16 @@
                     <p>Resolving disputes and protecting your civil rights with professionalism and efficiency.</p>
                 </div>
             </div>
-
+             <div class="col-lg-4 col-md-4 col-sm-6">
+    <div class="_jh_oi_cs">
+        <i class="fas fa-balance-scale"></i>
+        <h2>Inheritance Law</h2>
+        <p>We assist clients in Viterbo and across Italy with wills, succession planning, 
+        estate administration, and inheritance disputes. Our goal is to safeguard family 
+        interests, ensure fair asset distribution, and provide clear legal guidance during 
+        sensitive times.</p>
+    </div>
+</div>
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="_jh_oi_cs">
                     <i class="fas fa-briefcase"></i>
