--- a/contact-us.html
+++ b/contact-us.html
@@ -192,6 +192,7 @@
           <h2>Practice Areas</h2>
           <ul>
             <li>Civil Law</li>
+            <li>Inheritance Law</li>
             <li>Criminal Defense</li>
             <li>Corporate Law</li>
             <li>Family Law</li>
