--- a/blog.html
+++ b/blog.html
@@ -285,6 +285,7 @@
                     <h2>Practice Areas</h2>
                     <ul>
                         <li>Civil Law</li>
+                         <li>Inheritance Law</li>
                         <li>Criminal Law</li>
                         <li>Family Law</li>
                         <li>Business Law</li>
@@ -322,6 +323,7 @@
                 <div class="end-items">
                     <ul>
                         <li>Civil Law</li>
+                         <li>Inheritance Law</li>
                         <li>Criminal Law</li>
                         <li>Family Law</li>
                         <li>Business</li>
