--- a/about-us.html
+++ b/about-us.html
@@ -200,6 +200,7 @@
                     <h2>Practice Areas</h2>
                     <ul>
                         <li>Civil Law</li>
+                         <li>Inheritance Law</li>
                         <li>Family Law</li>
                         <li>Business & Corporate Law</li>
                         <li>Criminal Defense</li>
@@ -225,10 +226,11 @@
                 <div class="footer-content">
                     <h2>Quick Links</h2>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Our Services</a></li>
-                        <li><a href="#">Contact</a></li>
+                       <li><a href="index.html">Home</a></li>
+                                <li><a href="about-us.html">About Us</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
