--- a/services.html
+++ b/services.html
@@ -187,10 +187,10 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <h5 class="text-uppercase mb-3">Quick Links</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Practice Areas</a></li>
-                    <li><a href="#">Contact</a></li>
+                      <li><a href="about-us.html">About Us</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
             </div>
 
