--- a/index.html
+++ b/index.html
@@ -436,11 +436,10 @@
         <div class="footer-content">
           <h5 class="fw-bold mb-3">Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-light">Home</a></li>
-            <li><a href="#" class="text-light">About Us</a></li>
-            <li><a href="#" class="text-light">Practice Areas</a></li>
-            <li><a href="#" class="text-light">Contact</a></li>
-          </ul>
+             <li><a href="about-us.html">About Us</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="contact-us.html">Contact Us</a></li>
         </div>
       </div>
     </div>
