--- a/contact-us.html
+++ b/contact-us.html
@@ -150,11 +150,29 @@
 </section>
 
 <section class="mab-01">
-  <!-- Updated map location to Viterbo, Italy -->
-  <iframe style="width:100%" height="450" frameborder="0" allowfullscreen
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2975.7914790321467!2d12.103063215433556!3d42.419795679182586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132f0d2d6b9e2a7d%3A0x6bff6b4b0b9f30cb!2sViterbo%2C%20Italy!5e0!3m2!1sen!2sit!4v1698863859107">
-  </iframe>
+  <div class="map-responsive">
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d249759.19784092825!2d79.10145254589841!3d12.009924873581818!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1448883859107" 
+      width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="">
+    </iframe>
+  </div>
 </section>
+<style>
+.map-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  position: relative;
+  height: 0;
+}
+
+.map-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+</style>
 
 <footer>
   <div class="container">
