--- a/about-us.html
+++ b/about-us.html
@@ -35,7 +35,7 @@
                                     </li>
                                     <li>
                                         <i class="fa fa-headphones"></i>
-                                        <span>call for consultation</span>123.456.789
+                                        <span>call for consultation</span>+39 0761 123456
                                     </li>
                                 </ol>
                             </div>
