--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                     </li>
                                     <li>
                                         <i class="fa fa-headphones"></i>
-                                        <span>call for consultation</span>123.456.789
+                                        <span>call for consultation</span>+39 0761 123456
                                     </li>
                                 </ol>
                             </div>
