--- a/index.html
+++ b/index.html
@@ -171,6 +171,18 @@
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="big-client">
                     <div class="client">
+                        <img src="assets/images/client-00.jpg" alt="Alberto Luiz - Senior Attorney">
+                    </div>
+                    <div class="client-content">
+                        <h2>Alberto Luiz </h2>
+                        <p>Senior Attorney</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Team Member -->
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="big-client">
+                    <div class="client">
                         <img src="assets/images/client-01.jpg" alt="John Appleseed - Senior Partner">
                     </div>
                     <div class="client-content">
