--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="big-client">
                     <div class="client">
-                        <img src="assets/images/client-00.jpg" alt="Alberto Luiz - Senior Attorney">
+                        <img src="assets/images/client-00.JPG" alt="Alberto Luiz - Senior Attorney">
                     </div>
                     <div class="client-content">
                         <h2>Alberto Luiz </h2>
@@ -484,4 +484,5 @@
         })
       })
 </script>
+
 </html>
