--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6 col-12 mb-4">
                     <div>
-                        <h2 class="font-weight-bold mb-3">About Lawyer</h2>
-                        <p><strong>Lawyer</strong> is a trusted law firm dedicated to delivering results with integrity, professionalism, and commitment. With decades of combined experience, our attorneys specialize in corporate law, litigation, real estate,dispute resolution and Inheritance Law.</p>
+                        <h2 class="font-weight-bold mb-3">About Danerus Law Firm Pllc</h2>
+                        <p><strong>Danerus Law Firm Pllc</strong> is a trusted law firm dedicated to delivering results with integrity, professionalism, and commitment. With decades of combined experience, our attorneys specialize in corporate law, litigation, real estate,dispute resolution and Inheritance Law.</p>
                         <p>We pride ourselves on providing strategic advice and practical solutions that safeguard your business, your rights, and your future.</p>
                         <p>Our mission is simple: <em>to stand by your side, every step of the way.</em></p>
                         <a href="about-us.html" class="btn btn-primary mt-3">Meet Our Attorneys</a>
@@ -161,7 +161,7 @@
                 <div class="headding-01">
                     <i class="fas fa-landmark"></i>
                     <h2>Experienced Lawyers Protecting Your Rights</h2>
-                    <p>At Lawyer, we are committed to delivering strong legal defense and trusted advisory services. 
+                    <p>At Danerus Law Firm Pllc, we are committed to delivering strong legal defense and trusted advisory services. 
                     Our team combines deep knowledge of the law with dedication to achieving the best outcomes for our clients.</p>
                 </div>
             </div>
@@ -274,7 +274,7 @@
                     <h2>Read Our Blog & Stay Informed</h2>
                     <p>Stay updated with insights on law, business, and society from our team of experts. 
                     Follow us on social media for the latest news and legal trends.</p>
-                    <a href="#">Contact Us Now</a>
+                    <a href="contact-us.html">Contact Us Now</a>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-12">
@@ -341,7 +341,7 @@
         <div class="headding-01">
           <h2 class="text-uppercase fw-bold">Why Choose Us?</h2>
           <p class="text-muted">
-            At <strong>Lawyer</strong>, we are committed to delivering exceptional legal services. 
+            At <strong>Danerus Law Firm Pllc</strong>, we are committed to delivering exceptional legal services. 
             With our proven experience, dedication, and client-focused approach, 
             we ensure that your rights and interests are always protected.
           </p>
@@ -403,7 +403,7 @@
         <div class="footer-content">
           <h5 class="fw-bold mb-3">About Lawyer</h5>
           <p>
-            <strong>Lawyer</strong> is a trusted legal firm offering dedicated 
+            <strong>Danerus Law Firm Pllc</strong> is a trusted legal firm offering dedicated 
             counsel and representation. We are committed to protecting your rights 
             with professionalism and integrity.
           </p>
@@ -459,7 +459,7 @@
     <!-- Footer Bottom -->
     <div class="row border-top pt-3 mt-3">
       <div class="col-md-6 text-center text-md-start">
-        <p class="mb-0">&copy; 2025 <strong>Lawyer</strong>. All Rights Reserved.</p>
+        <p class="mb-0">&copy; 2025 <strong>Danerus Law Firm Pllc</strong>. All Rights Reserved.</p>
       </div>
       <div class="col-md-6 text-center text-md-end">
         <ul class="list-inline mb-0">
