--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Lawyer - Attorneys & Legal Consultants</title>
+    <title>Danerus Law Firm Pllc - Attorneys & Legal Consultants</title>
     <link rel="shortcut icon" href="assets/images/fav.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -21,7 +21,7 @@
                 <div class="row">
                     <div class="col-md-4 col-12">
                         <div class="logo">
-                            <h1>lawyer</h1>
+                            <h1>Danerus Law Firm Pllc</h1>
                         </div>
                     </div>
                     <div class="col-md-8 col-12">
@@ -56,7 +56,7 @@
                 <div class="row">
                     <div class="nav">
                         <div class="logo-01">
-                            <h1>lawyer</h1>
+                            <h1>Danerus Law Firm Pllc</h1>
                         </div>
                         <div class="menu-toggle"></div>
                         <div class="my-nav">
@@ -401,7 +401,7 @@
       <!-- About -->
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="footer-content">
-          <h5 class="fw-bold mb-3">About Lawyer</h5>
+          <h5 class="fw-bold mb-3">About Danerus Law Firm Pllc</h5>
           <p>
             <strong>Danerus Law Firm Pllc</strong> is a trusted legal firm offering dedicated 
             counsel and representation. We are committed to protecting your rights 
