--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="row">
                     <div class="col-md-4 col-12">
                         <div class="logo">
-                            <h1>Danerus Law Firm Pllc</h1>
+                            <h1>Lawyer</h1>
                         </div>
                     </div>
                     <div class="col-md-8 col-12">
@@ -56,7 +56,7 @@
                 <div class="row">
                     <div class="nav">
                         <div class="logo-01">
-                            <h1>Danerus Law Firm Pllc</h1>
+                            <h1>Lawyer</h1>
                         </div>
                         <div class="menu-toggle"></div>
                         <div class="my-nav">
