--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-12">
-                        <div class="logo">
-                            <h1>Lawyer</h1>
+                       <div class="logo">
+                          <img src="assets/images/0807CF70-EA25-4B37-A3CE-245163A53D4E.jpg" alt="Danerus Law Firm PLLC Logo">
                         </div>
                     </div>
                     <div class="col-md-8 col-12">
@@ -56,7 +56,7 @@
                 <div class="row">
                     <div class="nav">
                         <div class="logo-01">
-                            <h1>Lawyer</h1>
+                            <img src="assets/images/0807CF70-EA25-4B37-A3CE-245163A53D4E.jpg" alt="Danerus Law Firm PLLC Logo">
                         </div>
                         <div class="menu-toggle"></div>
                         <div class="my-nav">
