--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Danerus Law Firm Pllc - Attorneys & Legal Consultants</title>
+    <meta name="description" content="Danerus Law Firm PLLC provides trusted legal services with professionalism and dedication. Our team offers expert guidance in [practice areas, e.g., family law, inheritance law, business law, and litigation], helping clients achieve the best outcomes with integrity and care.">
+    <!-- Favicons Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/0807CF70-EA25-4B37-A3CE-245163A53D4E 2.jpg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/0807CF70-EA25-4B37-A3CE-245163A53D4E 2.jpg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/0807CF70-EA25-4B37-A3CE-245163A53D4E 2.jpg" />
+    
     <link rel="shortcut icon" href="assets/images/fav.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
