--- a/about-us.html
+++ b/about-us.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-12">
-                        <div class="logo">
+                       <div class="logo">
                           <img style="max-width: 150px;height: auto;border-radius:3px;" src="assets/images/0807CF70-EA25-4B37-A3CE-245163A53D4E.jpg" alt="Danerus Law Firm PLLC Logo">
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                 <div class="row">
                     <div class="nav">
                         <div class="logo-01">
-                            < <img style="max-width: 150px;height: auto;border-radius:3px;" src="assets/images/0807CF70-EA25-4B37-A3CE-245163A53D4E.jpg" alt="Danerus Law Firm PLLC Logo">
+                            <img style="max-width: 150px;height: auto;border-radius:3px;" src="assets/images/0807CF70-EA25-4B37-A3CE-245163A53D4E.jpg" alt="Danerus Law Firm PLLC Logo">
                         </div>
                         <div class="menu-toggle"></div>
                         <div class="my-nav">
