--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="big-client">
                     <div class="client">
-                        <img src="assets/images/client-01.jpg" alt="John Appleseed - Senior Partner">
+                        <img src="assets/images/lawyer4.jpg" alt="John Appleseed - Senior Partner">
                     </div>
                     <div class="client-content">
                         <h2>John Appleseed</h2>
@@ -201,7 +201,7 @@
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="big-client">
                     <div class="client">
-                        <img src="assets/images/client-02.jpg" alt="Rose Johnson - Corporate Lawyer">
+                        <img src="assets/images/lawyer1.JPG" alt="Rose Johnson - Corporate Lawyer">
                     </div>
                     <div class="client-content">
                         <h2>Rose Johnson</h2>
@@ -213,7 +213,7 @@
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="big-client">
                     <div class="client">
-                        <img src="assets/images/client-03.jpg" alt="Albert Smith - Litigation Expert">
+                        <img src="assets/images/lawyer3.jpg" alt="Albert Smith - Litigation Expert">
                     </div>
                     <div class="client-content">
                         <h2>Albert Smith</h2>
@@ -225,10 +225,10 @@
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="big-client">
                     <div class="client">
-                        <img src="assets/images/client-04.jpg" alt="Daniel Lee - Legal Consultant">
+                        <img src="assets/images/lawyer2.JPG" alt="Daniel Lee - Legal Consultant">
                     </div>
                     <div class="client-content">
-                        <h2>Daniel Lee</h2>
+                        <h2>Daniela Lee</h2>
                         <p>Legal Consultant</p>
                     </div>
                 </div>
