--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <p><strong>Danerus Law Firm Pllc</strong> is a trusted law firm dedicated to delivering results with integrity, professionalism, and commitment. With decades of combined experience, our attorneys specialize in corporate law, litigation, real estate,dispute resolution and Inheritance Law.</p>
                         <p>We pride ourselves on providing strategic advice and practical solutions that safeguard your business, your rights, and your future.</p>
                         <p>Our mission is simple: <em>to stand by your side, every step of the way.</em></p>
-                        <a href="about-us.html" class="btn btn-primary mt-3">Meet Our Attorneys</a>
+                        <a href="contact-us.html" class="btn btn-primary mt-3">Meet Our Attorneys</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
@@ -465,7 +465,7 @@
     <!-- Footer Bottom -->
     <div class="row border-top pt-3 mt-3">
       <div class="col-md-6 text-center text-md-start">
-        <p class="mb-0">&copy; 2025 <strong>Danerus Law Firm Pllc</strong>. All Rights Reserved.</p>
+        <p class="mb-0">&copy; 2002 <strong>Danerus Law Firm Pllc</strong>. All Rights Reserved.</p>
       </div>
       <div class="col-md-6 text-center text-md-end">
         <ul class="list-inline mb-0">
