--- a/about-us.html
+++ b/about-us.html
@@ -221,7 +221,7 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Via Roma 12, Viterbo, Italy</li>
                         <li><i class="fas fa-phone"></i> +39 0761 123456</li>
-                        <li><i class="fas fa-envelope"></i> info@lawyer-viterbo.it</li>
+                        <li><i class="fas fa-envelope"></i> info@daneruslawfirmpplc.com</li>
                     </ul>
                 </div>
             </div>
@@ -242,7 +242,7 @@
 
             <!-- Footer Bottom -->
             <div class="col-12 mt-3 text-center">
-                <p>© 2025 Lawyer | Studio Legale – Viterbo, Italy. All rights reserved.</p>
+                <p>© 2025 Danerus Law Firm Pllc | Studio Legale – Viterbo, Italy. All rights reserved.</p>
             </div>
         </div>
     </div>
