--- a/services.html
+++ b/services.html
@@ -204,7 +204,7 @@
                 <ul class="list-unstyled">
                     <li><i class="fas fa-map-marker-alt"></i> Via Roma, Viterbo, Italy</li>
                     <li><i class="fas fa-phone"></i> +39 0761 123456</li>
-                    <li><i class="fas fa-envelope"></i> info@lawyer-viterbo.it</li>
+                    <li><i class="fas fa-envelope"></i> info@daneruslawfirmpllc.com</li>
                 </ul>
             </div>
 
@@ -221,7 +221,7 @@
 
         <div class="row mt-3">
             <div class="col text-center">
-                <p class="mb-0">© 2025 Lawyer – Attorneys & Legal Consultants, Viterbo. All Rights Reserved.</p>
+                <p class="mb-0">© 2025 Danerus Law Firm Pllc – Attorneys & Legal Consultants, Viterbo. All Rights Reserved.</p>
             </div>
         </div>
     </div>
