--- a/blog.html
+++ b/blog.html
@@ -106,7 +106,7 @@
             <div class="col-12">
                 <div class="head-001">
                     <h2>Legal Insights from Viterbo</h2>
-                    <p>Articles and updates on Italian law, practical guides, and commentary from our team at <strong>Lawyer – Studio Legale</strong> in Viterbo.</p>
+                    <p>Articles and updates on Italian law, practical guides, and commentary from our team at <strong>Danerus Law Firm Pllc – Studio Legale</strong> in Viterbo.</p>
                 </div>
             </div>
         </div>
@@ -120,8 +120,8 @@
                     <div class="_lo_de_we_xa">
                         <h2>Presumption of Innocence: Your Rights</h2>
                         <ol>
-                            <li><i class="far fa-calendar-alt"></i> 10-07-2020</li>
-                            <li><i class="far fa-user"></i> Martin</li>
+                            <li><i class="far fa-calendar-alt"></i> 10-07-2018</li>
+                            <li><i class="far fa-user"></i> Lloyde</li>
                         </ol>
                         <p>What the presumption of innocence means in practice and how to protect your rights during investigations.</p>
                         <a href="#">Read More</a>
@@ -137,8 +137,8 @@
                     <div class="_lo_de_we_xa">
                         <h2>After a Loss: Claiming Damages</h2>
                         <ol>
-                            <li><i class="far fa-calendar-alt"></i> 10-07-2020</li>
-                            <li><i class="far fa-user"></i> Martin</li>
+                            <li><i class="far fa-calendar-alt"></i> 08-06-2010</li>
+                            <li><i class="far fa-user"></i> Charles</li>
                         </ol>
                         <p>How compensation works in Italy, deadlines, and documents you should collect to support your claim.</p>
                         <a href="#">Read More</a>
@@ -154,8 +154,8 @@
                     <div class="_lo_de_we_xa">
                         <h2>Car Accident in Lazio: First Steps</h2>
                         <ol>
-                            <li><i class="far fa-calendar-alt"></i> 10-07-2020</li>
-                            <li><i class="far fa-user"></i> Martin</li>
+                            <li><i class="far fa-calendar-alt"></i> 04-01-2007</li>
+                            <li><i class="far fa-user"></i> Christopher</li>
                         </ol>
                         <p>From the CID form to medical checks and insurance: a quick checklist for motorists in Viterbo.</p>
                         <a href="#">Read More</a>
@@ -171,8 +171,8 @@
                     <div class="_lo_de_we_xa">
                         <h2>Understanding Criminal Liability</h2>
                         <ol>
-                            <li><i class="far fa-calendar-alt"></i> 10-07-2020</li>
-                            <li><i class="far fa-user"></i> Martin</li>
+                            <li><i class="far fa-calendar-alt"></i> 21-12-2024</li>
+                            <li><i class="far fa-user"></i> Casablanca</li>
                         </ol>
                         <p>Key concepts of criminal responsibility and how intent, negligence, and evidence interact in court.</p>
                         <a href="#">Read More</a>
@@ -188,7 +188,7 @@
                     <div class="_lo_de_we_xa">
                         <h2>Rising Cybercrime: Protect Your Business</h2>
                         <ol>
-                            <li><i class="far fa-calendar-alt"></i> 10-07-2020</li>
+                            <li><i class="far fa-calendar-alt"></i> 08-11-2019</li>
                             <li><i class="far fa-user"></i> Martin</li>
                         </ol>
                         <p>Best practices for SMEs in Viterbo: contracts, policies, and reporting procedures after a breach.</p>
@@ -205,8 +205,8 @@
                     <div class="_lo_de_we_xa">
                         <h2>How Italian Law Tackles Organized Crime</h2>
                         <ol>
-                            <li><i class="far fa-calendar-alt"></i> 10-07-2020</li>
-                            <li><i class="far fa-user"></i> Martin</li>
+                            <li><i class="far fa-calendar-alt"></i> 15-05-2024</li>
+                            <li><i class="far fa-user"></i> Eddison</li>
                         </ol>
                         <p>An overview of anti-mafia measures, asset seizures, and protections for witnesses and victims.</p>
                         <a href="#">Read More</a>
@@ -222,8 +222,8 @@
                     <div class="_lo_de_we_xa">
                         <h2>Anti-Corruption Compliance for SMEs</h2>
                         <ol>
-                            <li><i class="far fa-calendar-alt"></i> 10-07-2020</li>
-                            <li><i class="far fa-user"></i> Martin</li>
+                            <li><i class="far fa-calendar-alt"></i> 15-03-2001</li>
+                            <li><i class="far fa-user"></i> Cooks</li>
                         </ol>
                         <p>Model 231, internal controls, and training: building a culture of integrity in your company.</p>
                         <a href="#">Read More</a>
@@ -240,7 +240,7 @@
                         <h2>Wrongfully Accused? Steps to Take</h2>
                         <ol>
                             <li><i class="far fa-calendar-alt"></i> 10-07-2020</li>
-                            <li><i class="far fa-user"></i> Martin</li>
+                            <li><i class="far fa-user"></i> Julia</li>
                         </ol>
                         <p>From appointing counsel to collecting evidence: immediate actions that can protect your case.</p>
                         <a href="#">Read More</a>
@@ -257,7 +257,7 @@
                         <h2>Know Your Rights During Police Checks</h2>
                         <ol>
                             <li><i class="far fa-calendar-alt"></i> 10-07-2020</li>
-                            <li><i class="far fa-user"></i> Martin</li>
+                            <li><i class="far fa-user"></i> Alex</li>
                         </ol>
                         <p>Identification, searches, and legal assistance: what the police can and cannot do under Italian law.</p>
                         <a href="#">Read More</a>
@@ -274,7 +274,7 @@
             <!-- About -->
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
                 <div class="footer-content">
-                    <p><strong>Lawyer – Studio Legale</strong>, Viterbo. We provide clear legal guidance and representation in civil, criminal, family, and business law.</p>
+                    <p><strong>Danerus Law Firm Pllc – Studio Legale</strong>, Viterbo. We provide clear legal guidance and representation in civil, criminal, family, and business law.</p>
                     <ol>
                         <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
                         <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
@@ -305,7 +305,7 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Via Roma 12, Viterbo</li>
                         <li><i class="fas fa-phone"></i> +39 0761 123456</li>
-                        <li><i class="fas fa-envelope"></i> info@lawyer-viterbo.it</li>
+                        <li><i class="fas fa-envelope"></i> info@daneruslawfirmpllc.com</li>
                     </ul>
                 </div>
             </div>
@@ -342,7 +342,7 @@
             <!-- Copyright -->
             <div class="row mt-3">
             <div class="col text-center">
-                <p class="mb-0">© 2025 Lawyer – Attorneys & Legal Consultants, Viterbo. All Rights Reserved.</p>
+                <p class="mb-0">© 2025 Danerus Law Firm Pllc – Attorneys & Legal Consultants, Viterbo. All Rights Reserved.</p>
             </div>
         </div>
         </div>
