--- a/contact-us.html
+++ b/contact-us.html
@@ -185,7 +185,7 @@
       <!-- Firm Intro -->
       <div class="col-lg-3 col-md-4 col-sm-6">
         <div class="footer-content">
-          <p>Lawyer – your trusted legal advisors in Viterbo, Italy.  
+          <p>Danerus Law Firm Pllc – your trusted legal advisors in Viterbo, Italy.  
           Protecting your rights with dedication and expertise.</p>
           <ol>
             <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
@@ -230,14 +230,14 @@
           <ul>
             <li>📍 Viterbo, Italy</li>
             <li>📞 +39 0761 123456</li>
-            <li>📧 info@lawyer-viterbo.it</li>
+            <li>📧 info@daneruslawfirmpllc.com</li>
           </ul>
         </div>
       </div>
 
       <div class="row mt-3">
             <div class="col text-center">
-                <p class="mb-0">© 2025 Lawyer – Attorneys & Legal Consultants, Viterbo. All Rights Reserved.</p>
+                <p class="mb-0">© 2025 Danerus Law Firm Pllc – Attorneys & Legal Consultants, Viterbo. All Rights Reserved.</p>
             </div>
         </div>
     </div>
