--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                     </li>
                                     <li>
                                         <i class="fa fa-headphones"></i>
-                                        <span>call for consultation</span>+39 0761 123456
+                                        <span>call for consultation</span>+39 378 031 7068
                                     </li>
                                 </ol>
                             </div>
