--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
                                     </li>
                                     <li>
                                         <i class="fa fa-headphones"></i>
-                                        <span>call for consultation</span>+39 0761 123456
+                                        <span>call for consultation</span>+39 378 031 7068
                                     </li>
                                 </ol>
                             </div>
@@ -203,7 +203,7 @@
                 <h5 class="text-uppercase mb-3">Contact</h5>
                 <ul class="list-unstyled">
                     <li><i class="fas fa-map-marker-alt"></i> Via Roma, Viterbo, Italy</li>
-                    <li><i class="fas fa-phone"></i> +39 0761 123456</li>
+                    <li><i class="fas fa-phone"></i> +39 378 031 7068</li>
                     <li><i class="fas fa-envelope"></i> info@daneruslawfirmpllc.com</li>
                 </ul>
             </div>
