--- a/contact-us.html
+++ b/contact-us.html
@@ -40,7 +40,7 @@
                                     </li>
                                     <li>
                                         <i class="fa fa-headphones"></i>
-                                        <span>call for consultation</span>+39 0761 123456
+                                        <span>call for consultation</span>+39 378 031 7068
                                     </li>
                                 </ol>
                             </div>
@@ -229,7 +229,7 @@
           <h2>Contact Info</h2>
           <ul>
             <li>📍 Viterbo, Italy</li>
-            <li>📞 +39 0761 123456</li>
+            <li>📞 +39 378 031 7068</li>
             <li>📧 info@daneruslawfirmpllc.com</li>
           </ul>
         </div>
