--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
                                     </li>
                                     <li>
                                         <i class="fa fa-headphones"></i>
-                                        <span>call for consultation</span>+39 0761 123456
+                                        <span>call for consultation</span>+39 378 031 7068
                                     </li>
                                 </ol>
                             </div>
@@ -304,7 +304,7 @@
                     <h2>Contact</h2>
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Via Roma 12, Viterbo</li>
-                        <li><i class="fas fa-phone"></i> +39 0761 123456</li>
+                        <li><i class="fas fa-phone"></i> +39 378 031 7068</li>
                         <li><i class="fas fa-envelope"></i> info@daneruslawfirmpllc.com</li>
                     </ul>
                 </div>
@@ -342,7 +342,7 @@
             <!-- Copyright -->
             <div class="row mt-3">
             <div class="col text-center">
-                <p class="mb-0">© 2025 Danerus Law Firm Pllc – Attorneys & Legal Consultants, Viterbo. All Rights Reserved.</p>
+                <p class="mb-0">© 2002 Danerus Law Firm Pllc – Attorneys & Legal Consultants, Viterbo. All Rights Reserved.</p>
             </div>
         </div>
         </div>
