--- a/about-us.html
+++ b/about-us.html
@@ -40,7 +40,7 @@
                                     </li>
                                     <li>
                                         <i class="fa fa-headphones"></i>
-                                        <span>call for consultation</span>+39 0761 123456
+                                        <span>call for consultation</span>+39 378 031 7068
                                     </li>
                                 </ol>
                             </div>
@@ -220,7 +220,7 @@
                     <h2>Contact Us</h2>
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Via Roma 12, Viterbo, Italy</li>
-                        <li><i class="fas fa-phone"></i> +39 0761 123456</li>
+                        <li><i class="fas fa-phone"></i> +39 378 031 7068</li>
                         <li><i class="fas fa-envelope"></i> info@daneruslawfirmpplc.com</li>
                     </ul>
                 </div>
