--- a/contact-us.html
+++ b/contact-us.html
@@ -23,7 +23,7 @@
   "@type": "LegalService",
   "name": "Danerus Law Firm PLLC",
   "url": "https://daneruslawfirmpllc.com",
-  "logo": "https://daneruslawfirmpllc.com/assets/images/lawlogo.jpg",
+  "logo": "https://daneruslawfirmpllc.com/assets/images/lawlogo.jpg"
   
 }
 </script>
